@@ -1,0 +1,24 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<colors>
+    <!-- Main Colors -->	
+	<color name="MainColor">FFA00000</color>
+	<color name="SelectColor">80A00000</color>
+
+	<!-- Background Color -->
+	<color name="BackgroundColor">FF000000</color>
+	<color name="FadeDiffuseColor">80000000</color>
+	
+	<!-- Secondary Color -->
+	<color name="SecondaryColor">FFA0A0A0</color>
+
+	<!-- Text Colors -->
+	<color name="TextColor">FF7F7F7F</color>
+	<color name="HighlightColor">FFFF7D00</color>
+	
+    <!-- Default Explicit Colors -->
+	<color name="Black">FF000000</color>
+	<color name="White">FFFFFFFF</color>
+	<color name="Red">FFFF0000</color>
+	<color name="Blue">FF0000FF</color>
+	<color name="Green">FF00FF00</color>
+</colors>
