@@ -1,6 +1,7 @@
 ﻿[B]2.0.0~beta1[/B]
 
 - Updated several windows (and other files) for Kodi Helix.
+- Added a new, dark skin color (Red-on-Black).
 - Fixed some bugs.
 
 [B]1.0.0[/B]
